logs/pygemony.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/github3'...
Listing './lib/python3.5/site-packages/github3/gists'...
Listing './lib/python3.5/site-packages/github3/issues'...
Listing './lib/python3.5/site-packages/github3/repos'...
Listing './lib/python3.5/site-packages/github3/search'...
Listing './lib/python3.5/site-packages/github3.py-0.9.5.dist-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/nose2'...
Listing './lib/python3.5/site-packages/nose2/backports'...
Listing './lib/python3.5/site-packages/nose2/plugins'...
Listing './lib/python3.5/site-packages/nose2/plugins/loader'...
Listing './lib/python3.5/site-packages/nose2/tests'...
Listing './lib/python3.5/site-packages/nose2/tests/functional'...
Listing './lib/python3.5/site-packages/nose2/tests/unit'...
Listing './lib/python3.5/site-packages/nose2/tools'...
Listing './lib/python3.5/site-packages/nose2-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyg'...
Compiling './lib/python3.5/site-packages/pyg/Pygemony.py'...
***   File "./lib/python3.5/site-packages/pyg/Pygemony.py", line 87
    print "Failed to open file {} with error of {}".format(file_, e)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyg/github.py'...
***   File "./lib/python3.5/site-packages/pyg/github.py", line 33
    print "Failed to login due to {}".format(e)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygemony-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate.py-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/test'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist/complexdist'...
Listing './lib/python3.5/site-packages/wheel/test/headers.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist/simpledist'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.24.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
